# swan-http

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  README_EN.md
docs/: API.md  API_EN.md  DYNAMIC_PARAMS.md  DYNAMIC_PARAMS_EN.md  PROXY.md  PROXY_EN.md  RETRY_MECHANISM.md  RETRY_MECHANISM_EN.md  STATE_INJECTION.md  STATE_INJECTION_EN.md  USAGE_GUIDE.md  USAGE_GUIDE_EN.md
examples/: Cargo.toml  basic_usage.rs  compile_time_type_check.rs  complete_retry.rs  complete_retry_example.rs  complex_api.rs  complex_api_example.rs  dynamic_params.rs  dynamic_params_example.rs  interceptor_usage.rs  no_generic_example.rs  optimized_performance.rs  optimized_performance_analysis.rs  performance_analysis.rs  proxy_usage.rs  retry.rs  retry_example.rs  retry_integration.rs  retry_integration_test.rs  simple_demo.rs  simple_retry.rs  simple_retry_test.rs  state_injection.rs  state_injection_example.rs
swan-common/: Cargo.toml  README.md  README_CN.md  README_EN.md
swan-common/src/: lib.rs
swan-common/src/interceptor/: cache.rs  mod.rs  traits.rs
swan-common/src/parsing/: client.rs  handler.rs  mod.rs
swan-common/src/types/: args.rs  http.rs  mod.rs  proxy.rs  retry.rs  retry_test.rs
swan-macro/: Cargo.toml  README.md  README_CN.md  README_EN.md
swan-macro/src/: common.rs  generate.rs  lib.rs
swan-macro/src/conversion/: mod.rs  types.rs
swan-macro/src/error/: handling.rs  mod.rs
swan-macro/src/generator/: client.rs  method.rs  mod.rs
swan-macro/src/optimization/: compile_time.rs  conditional.rs  mod.rs  state_access.rs  string_pool.rs  zero_cost.rs
swan-macro/src/request/: builder.rs  cache_interceptor.rs  dynamic_params.rs  mod.rs  retry.rs
