[workspace]
members = [
    "swan-common",
    "swan-macro",
    "examples"
]
resolver = "3"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
