[package]
name = "swan-http-examples"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "simple_demo"
path = "simple_demo.rs"

[[example]]
name = "basic_usage"
path = "basic_usage.rs"

[[example]]
name = "interceptor_usage"
path = "interceptor_usage.rs"

[[example]]
name = "complex_api"
path = "complex_api.rs"

[[example]]
name = "state_injection"
path = "state_injection.rs"

[[example]]
name = "dynamic_params"
path = "dynamic_params.rs"

[[example]]
name = "performance_analysis"
path = "performance_analysis.rs"

[[example]]
name = "optimized_performance"
path = "optimized_performance.rs"

[[example]]
name = "retry"
path = "retry.rs"

[[example]]
name = "simple_retry"
path = "simple_retry.rs"

[[example]]
name = "retry_integration"
path = "retry_integration.rs"

[[example]]
name = "complete_retry"
path = "complete_retry.rs"

[[example]]
name = "compile_time_type_check"
path = "compile_time_type_check.rs"

[[example]]
name = "no_generic_example"
path = "no_generic_example.rs"


[dependencies]
swan-common = { path = "../swan-common" }
swan-macro = { path = "../swan-macro" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11"
reqwest = { workspace = true }
async-trait = "0.1"
log = "0.4"
fastrand = "2.0"