[package]
name = "swan-common"
version = "0.2.7"
edition = "2024"
authors = ["CC Cheung <iwanttobeaprince@gmail.com>"]
description = "Common utilities and types for the Swan HTTP client library."
license = "GPL-3.0"
repository = "https://github.com/red-swan-rust/swan-http.git"
documentation = "https://github.com/red-swan-rust/swan-http/tree/master/docs"
keywords = ["http", "client", "declarative", "rust", "forest"]
categories = ["network-programming", "development-tools", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
serde_json = { workspace = true }
tokio = { workspace = true }
quote = "1.0"
log = "0.4"
fastrand = "2.0"