[package]
name = "swan-macro"
version = "0.3.2"
edition = "2024"
authors = ["CC Cheung <iwanttobeaprince@gmail.com>"]
description = "A declarative HTTP client library for Rust"
license = "GPL-3.0"
repository = "https://github.com/red-swan-rust/swan-http.git"
documentation = "https://github.com/red-swan-rust/swan-http/tree/master/docs"
keywords = ["http", "client", "declarative", "rust", "forest"]
categories = ["network-programming", "development-tools", "web-programming::http-client"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5.0"
serde_json = { workspace = true }
swan-common = "0.3.2"